# AscEmu

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  character_declinedname.sql
dep/bzip2/: CMakeLists.txt  bzip.css  bzip2.c  manual.html
dep/dbcfile/: CMakeLists.txt  dbcfile.cpp  dbcfile.h
dep/fmt/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/libmpq/libmpq/: mpq_libmpq.cpp  mpq_libmpq04.h
dep/loadlib/: CMakeLists.txt
dep/lualib/src/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
src/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  RegularGrid.h  VMapDefinitions.h  VMapTools.h  pchCollision.hpp
src/collision/Management/: IVMapManager.h  MMapManager.cpp  MMapManager.h  VMapManager2.cpp  VMapManager2.h
src/collision/Maps/: MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/collision/Models/: GameObjectModel.cpp  GameObjectModel.h  ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  WorldModel.h
src/logonserver/: CMakeLists.txt  pchLogon.hpp  resources.rc
src/logonserver/Auth/: AuthSocket.Legacy.cpp  AuthSocket.cpp  AuthSocket.h  AutoPatcher.cpp
src/logonserver/Console/: LogonConsole.cpp
src/logonserver/LogonCommServer/: LogonCommServer.cpp  LogonCommServer.h
src/logonserver/Realm/: RealmManager.cpp
src/logonserver/Server/: AccountMgr.cpp  AccountMgr.h  IpBanMgr.cpp  Logon.cpp  Logon.h  LogonConfig.h  LogonServerDefines.hpp  Main.cpp  Master.cpp  Master.hpp
src/scripts/EventScripts/: CMakeLists.txt  Setup.cpp  pchEventScripts.hpp
src/scripts/GossipScripts/: CMakeLists.txt  Setup.cpp  pchGossipScripts.hpp
src/scripts/QuestScripts/: CMakeLists.txt  Quest_Dragonblight.cpp  Quest_Durotar.cpp  Quest_The_Barrens.cpp  Quest_The_Barrens.h  Setup.cpp  pchQuestScripts.hpp
src/scripts/SpellHandlers/: CMakeLists.txt  Setup.cpp  pchSpellHandlers.hpp
src/scripts/SpellHandlers/LegacyFiles/: CMakeLists.txt  DeathKnightSpells.cpp
src/scripts/SpellHandlers/Scripts/: CMakeLists.txt  Items.cpp  Mage.cpp  Monk.cpp  Paladin.cpp  Priest.cpp
src/shared/: BuildInfo.hpp  BuildInfo.hpp.in  ByteBuffer.h  ByteBuffer.hpp  CMakeLists.txt  Common.Legacy.h  CrashHandler.cpp  LocationVector.hpp  PerformanceCounter.cpp  PerformanceCounter.hpp  README.md  StringFormat.hpp  SysInfo.cpp  SysInfo.hpp  Util.hpp  WoWGuid.hpp  WorldPacket.h  git_version.hpp.in  pchShared.hpp
src/shared/Config/: Config.cpp  Config.hpp
src/shared/Cryptography/: BigNumber.cpp  BigNumber.hpp  Sha1.hpp
src/shared/Database/: Database.cpp  Database.hpp  DatabaseSelfTest.cpp  DatabaseUpdater.cpp  MySQLDatabase.cpp  MySQLDatabase.hpp
src/shared/Debugging/: CrashHandler.cpp  CrashHandler.hpp  CrashHandlerSelfTest.cpp  Errors.hpp  StackTrace.cpp  StackTrace.hpp
src/shared/Logging/: Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  Severity.hpp
src/shared/Network/: ByteBuffer.hpp  ListenSocketFreeBSD.h  ListenSocketLinux.h  ListenSocketWin32.h  Network.hpp  NetworkIncludes.hpp  Socket.cpp  Socket.h  Socket.hpp  SocketDefines.hpp  SocketFreeBSD.cpp  SocketLinux.cpp  SocketMgr.cpp  SocketMgr.hpp  SocketMgrFreeBSD.cpp  SocketMgrLinux.cpp  SocketMgrWin32.cpp  SocketWin32.cpp  WorldPacket.hpp
src/shared/Network/Core/: ListenCommon.hpp  NetworkBackend.hpp  NetworkBackendCommon.hpp  Resolver.hpp  (+11 more)
src/shared/Platform/: PerformanceCounter.cpp  PerformanceCounter.hpp  SymbolVisibility.hpp  SysInfo.cpp  SysInfo.hpp
src/shared/Threading/: AEThreadPool.cpp  LegacyThreadPool.cpp  LegacyThreadPool.h  ThreadPool.hpp
src/shared/Utilities/: CallBack.hpp  LocationVector.cpp  Util.cpp  utf8.hpp
src/world/: CMakeLists.txt  StdAfx.h  pchWorld.hpp  resources.rc
src/world/Chat/: Channel.cpp  Channel.hpp  ChannelDefines.hpp  ChannelMgr.cpp  ChannelMgr.hpp  ChatCommand.hpp  ChatCommandHandler.hpp  ChatDefines.hpp  ChatHandler.cpp  ChatHandler.hpp  CommandTableStorage.cpp  CommandTableStorage.hpp
src/world/Macros/: MapsMacros.hpp
src/world/Management/: AchievementMgr.cpp  AchievementMgr.h  AddonMgr.cpp  ArenaTeam.cpp  ArenaTeam.hpp  Arenas.cpp  AuctionHouse.cpp  AuctionMgr.cpp  CalendarMgr.cpp  EquipmentSetMgr.cpp  EquipmentSetMgr.h  G3DPosition.hpp  GameEvent.cpp  GameEventMgr.cpp  Group.cpp  Group.h  HonorHandler.h  ItemInterface.cpp  ItemInterface.h  LootMgr.cpp  MailMgr.cpp  ObjectMgr.cpp  QuestLogEntry.cpp  QuestLogEntry.hpp  QuestMgr.cpp  QuestMgr.h  Skill.hpp  TaxiMgr.cpp  TaxiMgr.hpp  TransporterHandler.cpp  WeatherMgr.cpp  WorldStatesHandler.cpp  WorldStatesHandler.hpp
src/world/Map/: AreaBoundary.hpp  MapMgr.cpp
src/world/Movement/: MovementDefines.cpp  MovementDefines.h  MovementGenerator.h  MovementManager.cpp  WaypointManager.cpp  WaypointManager.h
src/world/Objects/: Container.cpp  GameObject.cpp  GameObjectProperties.hpp  Item.Legacy.cpp  Item.cpp  MovementCodec.hpp  MovementDefines.hpp  MovementDescriptors.cpp  MovementDescriptors.hpp  MovementInfo.cpp  MovementInfo.hpp  MovementPacketAdapter.hpp  MovementTypes.hpp  Object.cpp  Object.hpp  ObjectMgr.cpp  ObjectMgr.h  TransportBase.cpp  TransportBase.hpp  Transporter.cpp
src/world/Server/: ConfigMgr.hpp  DatabaseDefinition.hpp  EventMgr.h  EventableObject.h  Main.cpp  Master.cpp  Master.h  OpcodeHandlerRegistry.cpp  OpcodeHandlerRegistry.hpp  OpcodeTable.hpp  Opcodes.hpp  World.cpp  World.h  WorldConfig.cpp  WorldConfig.h  WorldRunnable.cpp  WorldSession.cpp  WorldSession.h  WorldSessionLog.hpp  WorldSocket.cpp  WorldSocket.h
src/world/Spell/: AuraEffectModifier.hpp  Spell.Legacy.cpp  Spell.cpp  SpellAura.cpp  SpellAuraEffects.cpp  SpellAuras.Legacy.cpp  SpellAuras.cpp  SpellCastTargets.hpp  SpellClickInfo.hpp  SpellEffects.Legacy.cpp  SpellEffects.cpp  SpellInfo.cpp  SpellInfo.hpp  SpellMgr.cpp  SpellProc.hpp  SpellScript.hpp  SpellTarget.Legacy.cpp  Spell_ClassScripts.cpp
src/world/Storage/: MySQLDataStore.cpp  MySQLDataStore.hpp  MySQLStructures.h
src/world/Units/: Unit.Legacy.cpp  Unit.cpp  Unit.h
(+674 files in other folders)
